--- a/dots/.config/hypr/custom/general.conf
+++ b/dots/.config/hypr/custom/general.conf
@@ -2,5 +2,15 @@
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
-
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
+
+plugin {
+    csgo-vulkan-fix {
+        fix_mouse = true
+        
+        res_w = 2560
+        res_h = 1440
+    
+        vkfix-app = cs2, 2560, 1440
+    }
+}
