--- a/dots/.config/hypr/custom/keybinds.conf
+++ b/dots/.config/hypr/custom/keybinds.conf
@@ -22,3 +22,13 @@ bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/custom/keybinds.conf
 # Use ##! to add a section in that column
 # Add a comment after a bind to add a description, like above
 
+bind = Super, D, exec, caelestia toggle communication
+bind = Super, M, exec, caelestia toggle music
+bind = Ctrl+Shift, Escape, exec, caelestia toggle sysmon
+
+bind = Ctrl+Alt, V, exec, app2unit -- pavucontrol
+bind = Super, S, exec, caelestia toggle specialws
+#bind = SUPER, grave, hyprexpo:expo, toggle
+
+#bind = Super+Alt, P, exec, hyprcap screenshot -s monitor:active --freeze --copy -n -a
+bind = Super+Alt, P, exec, swappy -f "$(hyprcap screenshot -s monitor:active --freeze --copy -Nw)"
