--- a/dots/.config/hypr/custom/rules.conf
+++ b/dots/.config/hypr/custom/rules.conf
@@ -9,3 +9,9 @@
 
 # Disable blur for all xwayland apps
 # windowrule = no_blur on, match:xwayland 1
+
+# windowrule = workspace special:sysmon, class:btop
+# windowrule = workspace special:music, class:feishin|Spotify|Supersonic
+# windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wayland, it has no class for some reason
+# windowrule = workspace special:communication, class:discord|equibop|vesktop|whatsapp
+# windowrule = workspace special:todo, class:Todoist
