--- a/dots/.config/hypr/hypridle.conf
+++ b/dots/.config/hypr/hypridle.conf
@@ -20,7 +20,7 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 
-listener {
-    timeout = 900 # 15mins
-    on-timeout = $suspend_cmd
-}
+# listener {
+#     timeout = 900 # 15mins
+#     on-timeout = $suspend_cmd
+# }
